Fixed instructions and added default sequence

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <script src="libs/matter-js/0.12.0/matter.min.js"></script>
     <style>
         body {padding: 0; margin: 0;}
+        div.absolute {
+  position: absolute;
+  top: 390px;
+  right: 555px;
+  width: 200px;
+  height: 165px;
+  border: 1px solid #000000;
+}
     </style>
   </head>
   <body>
@@ -15,5 +23,10 @@
     <script src="chip.js"></script>
     <script src="peg.js"></script>
     <script src="boxEdge.js"></script>
+    <div class="absolute">Please enter a mixed sequence of "y"s and "n"s into the text box below 
+      to drop red balls on the left or blue balls on the right respectivly. No spaces or capitals 
+      are required. a default sequence of "ynynynyn" is pre-programed if you do not wish to specify
+      your own.</div>
+    
   </body>
 </html>
